created data model for IoT platform and MQTT submission

--- a/config/mqtt.ini
+++ b/config/mqtt.ini
@@ -7,8 +7,14 @@ pemCertFilePath = ./certificates/newcert.pem
 sapIotDeviceID = melbourne0001
 
 [sensors]
+sensorAlternateId = melbournevehicletracker0001
+capabilityAlternateId = allVehicleData
 
-[capabilities]
+[messages]
+vehicleData = {{ "capabilityAlternateId": "{}", "sensorAlternateId": "{}", "measures": [{{
+    "id": "{}", "class": "{}", "measuredSpeed": "{}", "directionAngle": "{}", 
+    "directionVerbal": "{}", "detectionOccurences": "{}", "trackingOccurences": "{}", 
+    "classAvgPropability": "{}", "classStdDeviation": "{}", "color": "{}" }}] }}
 
 [topics]
 ackTopicLevel = ack/
