--- a/config/tracker.ini
+++ b/config/tracker.ini
@@ -1,12 +1,15 @@
 [opencv]
 
-
-[tracker]
-ioUThreshold = 0.33 # Intersection over Union threshold value
+[detector]
+detectionConfidence = 0.55 # Needed score to consider detection
+classAnomalies = 0.3 # Prioritize deviating classes over the majority detected (e.g. truck/bus over car)
 staleObject = 30 # Amount of frames without detection (leads to object deletion)
 detectionCredit = 3 #points awarded for successful detection of object to tracker
-maxCredit = 50 # Maximum credit for a tracked object
 detectionMissDebit = 1 # points deducted for each round of video frame
+maxCredit = 50 # Maximum credit for a tracked object
+
+[tracker]
 trackerType = MEDIANFLOW # Tracker to be used
-detectionConfidence = 0.55 # Needed score to consider detection
+ioUThreshold = 0.33 # Intersection over Union threshold value
 maxTrackerBoxSize = 0.4 # Max ratio to screen width (avoids "ghost" trackers)
+framesForSpeedCalc = 6 # Consider the last n frames for calculating the speed
