--- a/config/measurements.ini
+++ b/config/measurements.ini
@@ -1,8 +1,12 @@
-[image]
+[Inbound_Bridge_Melbourne01.mp4]
 format = (900, 506)
 trafficupdown = True
 referencelenght = 12.0
-
-[referencepoints]
 references = [(359, 450), (397, 318), (420, 239), (434, 186), (445, 150), (452, 123), (459, 101)]
+
+[Inbound_Bridge_Melbourne04.mp4]
+format = (900, 506)
+trafficupdown = True
+referencelenght = 12.0
+references = [(363, 481), (384, 321), (395, 232), (403, 173), (407, 132), (412, 103)]
 
