--- a/config/tracker.ini
+++ b/config/tracker.ini
@@ -13,3 +13,6 @@ trackerType = MEDIANFLOW # Tracker to be used
 ioUThreshold = 0.33 # Intersection over Union threshold value
 maxTrackerBoxSize = 0.4 # Max ratio to screen width (avoids "ghost" trackers)
 framesForSpeedCalc = 6 # Consider the last n frames for calculating the speed
+
+[classes]
+allowedClass = ["car", "truck", "bus", "motorcycle"] # Classes which should be considered
